--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 	<meta name="description" content="" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
+	<!-- CSS -->
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
+	<link href="css/bootstrap.css" rel="stylesheet" media="all">
+	<link href="css/commerce_columns_carousel.css" rel="stylesheet" media="all">
+	<link href="css/thumbnail_image_left_carousel.css" rel="stylesheet" media="all">
+	<link href="css/animate.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
-		<link rel="stylesheet" type="text/css" media="all" href="css/jquery.dualSlider.0.3.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<!-- JS -->
+  <script src="js/jquery.js" type="text/javascript"></script>
+
 	<script type="text/javascript" src="js/jquery.pagepiling.min.js"></script>
 	<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
 	<script src="js/jquery.timers-1.2.js" type="text/javascript"></script>
-	<script src="js/jquery.dualSlider.0.3.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var deleteLog = false;
 
@@ -28,24 +35,6 @@
 					});
 	    });
     </script>
-		<script type="text/javascript">
-
-			$(document).ready(function() {
-
-				$(".carousel").dualSlider({
-					auto:false,
-					autoDelay: 3000,
-					easingCarousel: "swing",
-					easingDetails: "swing",
-					durationCarousel: 600,
-					durationDetails: 600
-				});
-
-			});
-
-
-		</script>
-
 </head>
 <body>
 
@@ -65,90 +54,188 @@
 				<div class="bg_bottom_7"></div>
 
 	    </div>
-			<div class="section" id="interviews">
-
-				<div class="carousel clearfix">
-					<div class="panel">
-						<div class="details_wrapper">
-							<div class="details">
-								<div class="detail">
-								<h2>Philip Seymour Hoffman</h2>
-								<p>"Creating something is all about problem-solving"</p>
-								<a href="" title="Read more" class="more">Read the Interview</a>
-								</div>
-								<div class="detail">
-									<h2 class="Lexia-Bold"><a href="http://www.htmldrive.net/edit_media/2010/201008/20100831/dualSlider/index.html#">Dolor sit amet</a> Cum sociis natoque penatibus et magnis dis parturient montes</h2>
-									<a href="http://www.htmldrive.net/edit_media/2010/201008/20100831/dualSlider/index.html#" title="Read more" class="more">Read more</a>
-								</div><!-- /detail -->
-								<div class="detail">
-									<h2 class="Lexia-Bold"><a href="http://www.htmldrive.net/edit_media/2010/201008/20100831/dualSlider/index.html#">Lorem ipsum dolor</a> sit amet, consectetuer adipiscing elit. </h2>
-									<a href="http://www.htmldrive.net/edit_media/2010/201008/20100831/dualSlider/index.html#" title="Read more" class="more">Read more</a>
-								</div><!-- /detail -->
-							</div><!-- /details -->
-						</div><!-- /details_wrapper -->
-
-						<div class="paging">
-							<div id="numbers"><a rel="1" title="Go to page 1 " class="link1" href="javascript:void(0)">1</a><a rel="2" title="Go to page 2 " class="link2 selected" href="javascript:void(0)">2</a><a rel="3" title="Go to page 3 " class="link3" href="javascript:void(0)">3</a></div>
-							<a href="javascript:void(0);" class="previous" title="Previous">Previous</a>
-							<a href="javascript:void(0);" class="next" title="Next">Next</a>
-						</div><!-- /paging -->
-					</div><!-- /panel -->
-
-					<div class="backgrounds" >
-						<div class="item item_1">
-								<img src="images/interview_1.png" />
-						</div>
-
-						<div class="item item_2">
-							<img src="images/interview_2.png" />
-						</div><!-- /item -->
-
-						<div class="item item_3">
-							<img src="images/interview_3.png" />
-						</div><!-- /item -->
-
-						<div class="item item_1">
-								<img src="images/interview_1.png" />
-						</div>
-
-						<div class="item item_2">
-							<img src="images/interview_2.png" />
-						</div><!-- /item -->
-
-						<div class="item item_3">
-							<img src="images/interview_3.png" />
-						</div><!-- /item -->
-
-					</div><!-- /backgrounds -->
-				</div><!-- /carousel -->
+		<div class="section" id="interviews">
+			<div class="interview_intro">
+				<h1>Science World Stories</h1>
+				<h2>12 inspiring and empowering stories from science enthusiasts and supporters</h2>
 			</div>
+			<div id="thumbnail_image_left_carousel" class="carousel slide animate_text thumbnail_image_left_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" data-duration="2000" data-interval="false" data-pause="hover">
 
-			<div class="section" id="section2">
+				<!-- Indicators -->
+				<ol class="carousel-indicators thumbnail_image_left_carousel_indicators">
+
+					<li data-target="#thumbnail_image_left_carousel" data-slide-to="0" class="active">
+						<img src="images/slider_01.jpg" alt="slider 01" />
+					</li>
+
+					<li data-target="#thumbnail_image_left_carousel" data-slide-to="1">
+						<img src="images/slider_02.jpg" alt="slider 02" />
+					</li>
+
+					<li data-target="#thumbnail_image_left_carousel" data-slide-to="2">
+						<img src="images/slider_03.jpg" alt="slider 03" />
+					</li>
+
+				</ol>
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+
+					<!--========= First Slide =========-->
+					<div class="carousel-item active">
+						<img src="images/slider_01.jpg" alt="slider 01" />
+						<div class="carousel-caption thumbnail_image_left_carousel_caption">
+							<h1>Cybele Negris</h1>
+							<p>Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls</p>
+							</br><a href="#">Read the Interview</a>
+						</div>
+					</div>
+
+					<!--========= Second Slide =========-->
+					<div class="carousel-item">
+						<img src="images/slider_02.jpg" alt="slider 02">
+						<div class="carousel-caption thumbnail_image_left_carousel_caption">
+							<h1>Barbara Brink</h1>
+							<p>For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.</p>
+							</br><a href="#">Read the Interview</a>
+						</div>
+					</div>
+
+					<!--========= Third Slide =========-->
+					<div class="carousel-item">
+						<img src="images/slider_03.jpg" alt="slider 03" />
+						<div class="carousel-caption thumbnail_image_left_carousel_caption">
+							<h1>Bob and Lily Lee</h1>
+							<p>Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth</p>
+							</br><a href="#">Read the Interview</a>
+						</div>
+					</div>
+
+				</div>
+
+			</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+
+		</div>
+
+		<div class="section" id="section2">
 	    	<div class="intro">
-	    		<h1>THE PAST</h1>
-	    		<p></p>
+					<div class="interview_intro">
+						<h1>BC’s Thriving Future</h1>
+						<h2>We are Full STEAM Ahead with:</h2>
+					</div>
+					<!--*-*-*-*-*-*-*-*-*-*- BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+
+					<div id="adv_commerce_3_columns_carousel" class="carousel slide commerce_columns_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" wrap="false" data-duration="2000" data-interval="false" data-pause="hover" data-column="3" data-m576="1" data-m768="1" data-m992="3" data-m1200="3">
+
+						<!--========= Wrapper for slides =========-->
+						<div class="carousel-inner" role="listbox">
+
+							<!--========= First slide =========-->
+							<div class="carousel-item active">
+								<div class="row"> <!-- Row -->
+									<div class="col">
+										<div class="commerce_columns_item_inner">
+											<div class="commerce_columns_item_image">
+												<img src="images/team_01.png" alt="slider 03" />
+											</div>
+											<div class="commerce_columns_item_caption">
+												<h1>Girls and STEAM</h1>
+												<p>Empowering girls to pursue their STEAM passions through workshops, speakers and mentors.</p>
+												<p>A symposium and showcase that empowers girls to pursue their STEAM passions through workshops, speakers and mentors.</p>
+
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!--========= Second slide =========-->
+							<div class="carousel-item">
+								<div class="row"> <!-- Row -->
+									<div class="col">
+										<div class="commerce_columns_item_inner">
+											<div class="commerce_columns_item_image">
+												<img src="images/team_02.png" alt="slider 03" />
+											</div>
+											<div class="commerce_columns_item_caption">
+												<h1>Future Science Leaders</h1>
+												<p>Inspiring and challenging top students to excel in science and innovation through programming from and networking with BC’s top science, technology and business leaders, and peers.</p>
+
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<!--========= Third Slide =========-->
+							<div class="carousel-item">
+								<div class="row"> <!-- Row -->
+									<div class="col">
+										<div class="commerce_columns_item_inner">
+											<div class="commerce_columns_item_image">
+												<img src="images/team_03.png" alt="slider 03" />
+											</div>
+											<div class="commerce_columns_item_caption">
+												<h1>Symbiosis</h1>
+												<p>Canada's first STEAM Learning Ecosystem to scale science literacy across BC by providing quality STEAM learning opportunities for all children and youth, regardless of geography, ethnicity or family income.</p>
+
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+						<!--======= Navigation Buttons =========-->
+
+						<!--======= Left Button =========-->
+						<a class="carousel-control-prev commerce_columns_carousel_control_left adv_left" href="#adv_commerce_3_columns_carousel" data-slide="prev">
+							<span class="fa fa-angle-left commerce_columns_carousel_control_icons" aria-hidden="true"></span>
+						</a>
+
+						<!--======= Right Button =========-->
+						<a class="carousel-control-next commerce_columns_carousel_control_right adv_right" href="#adv_commerce_3_columns_carousel" data-slide="next">
+							<span class="fa fa-angle-right commerce_columns_carousel_control_icons" aria-hidden="true"></span>
+						</a>
+
+					</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+
+
 	    	</div>
 	    </div>
 	    <div class="section" id="section3">
-	    	<div class="intro">
-	    		<h1>THE FUTURE</h1>
-	    		<p></p>
+	    	<div class="past_intro">
+	    		<h2>Explore some of our favourite memories from the last 30 years</h2>
+				<br/><a href="history.html">Take Me Back</a>
 	    	</div>
 	    </div>
 			<div class="section" id="section4">
 		    	<div class="intro">
-		    		<h1>TELL YOUR STORY</h1>
-		    		<p></p>
-		    	<div class="overlay1"></div>
-					<div class="overlay2"></div>
-					<div class="overlay3"></div>
-					<div class="overlay4"></div>
-					<video autoplay loop muted id="myVideo">
-						<source src="images/video_bg_2.mp4" type="video/mp4">
-					</video>
-			</div>
+		    		<h1>Share Your Favourite Memories</h1>
+		    		<h4>From your Ha-ha! to your Ah-ha! moment, we want to hear your favourite memory of Science World.</h4>
+						</br><a href="">Record Your Memory</a></br></br></br>
+						<p>Help us create those Ah-ha! moments in communities across the province!</p>
+						</br><a href="">Donate</a>
+						<div class="bg_top_1"></div>
+						<div class="bg_top_2"></div>
+						<div class="bg_top_3"></div>
+						<div class="bg_top_4"></div>
+						<div class="bg_bottom_1"></div>
+						<div class="bg_bottom_2"></div>
+						<div class="bg_bottom_3"></div>
+						<div class="bg_bottom_4"></div>
+						<div class="bg_bottom_5"></div>
+						<div class="bg_bottom_6"></div>
+						<div class="bg_bottom_7"></div>
+					</div>
 	    </div>
 	</div>
+
+
+<script src="js/bootstrap.js"></script>
+<script src="js/touchSwipe.js"></script>
+<script src="js/responsive_bootstrap_carousel.js"></script>
 
 </body>
 </html>
