--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
 	<meta name="Resource-type" content="Document" />
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.css" rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="css/subpages.css" />
 	<!-- JS -->
