--- a/history.html
+++ b/history.html
@@ -18,7 +18,7 @@
 <body>
 <div class="history_wrapper">
 
-	<div class="history_bg_1">
+	<div class="history_bg">
 		<div class="history_intro history_intro_1">
 			<div class="history_intro_title">
 
@@ -38,12 +38,13 @@
 
 	</div>
 
-	<div class="history_bg_2">
-		<div class="visitor_intro">
+	<div class="history_bg_aqua">
+		<div class="history_title">
 			<h1>Over the past 3 decades, we have welcomed a variety of big names from around the globe. Here are just a few:</h1>
 		</div>
 	</div>
-  <div class="history_bg_3">
+
+  <div class="history_bg">
 		<div class="visitors_1 visitor">
 			<div class="visitor_title_wrapper">
 				<div class="visitor_title">
@@ -95,15 +96,97 @@
 
 	</div>
 
-	<div class="history_bg_4">
+	<div class="history_bg_orange">
+		<div class="history_title">
+			<h1>How many of these experiences can you name?</h1>
+			<p><i>(answer key at bottom of page)</i></p>
+		</div>
+	</div>
+
+	<div class="history_bg">
+
+		<div class="history_quiz_1 history_quiz">
+			<div class="history_quiz_wrapper">
+				<div class="history_quiz_title">
+					<h1>1</h1>
+				</div>
+			</div>
+		</div>
+
+		<div class="history_quiz_2 history_quiz">
+			<div class="history_quiz_wrapper">
+				<div class="history_quiz_title">
+					<h1>2</h1>
+				</div>
+			</div>
+		</div>
+
+		<div class="history_quiz_3 history_quiz">
+			<div class="history_quiz_wrapper">
+				<div class="history_quiz_title">
+					<h1>3</h1>
+				</div>
+			</div>
+		</div>
+
+		<div class="history_quiz_4 history_quiz">
+			<div class="history_quiz_wrapper">
+				<div class="history_quiz_title">
+					<h1>4</h1>
+				</div>
+			</div>
+		</div>
+
+		<div class="history_quiz_5 history_quiz">
+			<div class="history_quiz_wrapper">
+				<div class="history_quiz_title">
+					<h1>5</h1>
+				</div>
+			</div>
+		</div>
+
+		<div class="history_quiz_6 history_quiz">
+			<div class="history_quiz_wrapper">
+				<div class="history_quiz_title">
+					<h1>6</h1>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="history_bg_aqua">
+		<div class="history_title">
+			<h1>A Special Thank You</h1>
+
+			<h2>TELUS has been a supporting partner of Science World since 2005, and we thank them for their commitment to a thriving future for BC!</h2>
+
+		</div>
+	</div>
+
+	<div class="history_bg_orange">
 		<div class="history_title">
 
-			<h1>How many of these experiences can you name?</h1>
-			<hp><i>(answer key at bottom of page)</i></p>
+<h1>705,000 Visitors our First Year!</h1>
+<h2>We’re open! Science World welcomes 705,000 visitors in its first year under the dome, and visits 96 BC communities with its outreach programs. Roadshows visit 65 schools across the province.</h2>
+</br></br>
+<h1>2,400,000 Students Inspired!</h1>
+<h2>You can’t put a price on science presentations...so we didn’t! Instead, our Scientists and Innovators in the Schools program trains STEAM professionals across the province to deliver free in-class presentations. Since 1989, we have inspired over 2,400,000 students. Get inspired! </h2>
+</br></br>
+<h1>100,000 People Connected!</h1>
+<h2>Our Community Science Celebration program celebrates the cool science that’s happening in communities across BC. This program connects the public to organizations, businesses and educational resources in that region—for free! Over its 12-year history, it has connected over 100,000 people to their local STEAM community. Find out where the next celebration will be!</h2>
+</br></br>
+<h1>660,000 Students Visited!</h1>
+<h2>A tour de force...literally. Our On The Road program brings joy, excitement and the wonders of science to K–12 students across the province. Through its 11-year history, the On The Road gymnasium presentations reached over 660,000 students. Now that’s a lot of TP! Hear what students and teachers are saying bout this program.</h2>
+</br></br>
+<h1>1 Million Visitors in 2018!</h1>
+<h2>A million reasons to celebrate!  We reached 1 million people in 2018, through visitors to the dome and through our outreach programs. That means that over one-fifth of the population of British Columbia have been introduced to, excited by or further developed a life-long love of STEAM. </h2>
+
+</br></br></br></br>
+<p><i>Answers: 1. Ames’ Room (big-small room)&nbsp;&nbsp;&nbsp;2. Beaver dam&nbsp;&nbsp;&nbsp;3. Jolly Jumper&nbsp;&nbsp;&nbsp;4. Piano in Eureka!&nbsp;&nbsp;&nbsp;5. Van de Graaff generator&nbsp;&nbsp;&nbsp;6. Dino exhibition</i></p>
 
 
 		</div>
-
 	</div>
 
 
