--- a/Barbara.html
+++ b/Barbara.html
@@ -13,16 +13,25 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.css" rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="css/subpages.css" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
 </head>
 <body>
+
+	<ul id="menu">
+		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+		<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
+		<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+	</ul>
 <div class="interveiw_subpages">
 	<div class="interview_banner_barbara">
-		<h1>Barbara Brink</h1>
+
 	</div>
 		<div class="history_bg_orange">
 			<div class="history_title">
-
+<h1>Barbara Brink</h1>
 				<p>It was on a Brink family trip to Toronto in the mid-1970s that the idea for Science World was hatched. Barbara’s husband, Russell, had recently been appointed project manager for Vancouver’s Granville Island redevelopment and was researching how public markets functioned in other cities around the world. While he worked, Barbara tried to keep their two young sons—who, she says, were “bouncing on the bed” all day long—entertained. The front desk clerk at their hotel recommended she take them to the Ontario Science Centre. </p>
 				</br>
 
