--- a/Cybele.html
+++ b/Cybele.html
@@ -13,16 +13,24 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.css" rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="css/subpages.css" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
 </head>
 <body>
+	<ul id="menu">
+		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+		<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
+		<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+	</ul>
 <div class="interveiw_subpages">
 	<div class="interview_banner_cybele">
-		<h1>Cybele Negris</h1>
+
 	</div>
 		<div class="history_bg_orange">
 			<div class="history_title">
-
+<h1>Cybele Negris</h1></br>
 				<p>Given the amount of time Cybele Negris has spent at Science World over the past decade, you could forgive her for considering it a second home. As the mother of two, Negris has passed countless hours at the centre walking through the Eureka! Gallery or checking out The Science Behind Pixar exhibition. </p>
 				</br>
 				<p>“We were there on the first night they ever did Camp-In, the sleepover,” she recalls. “My kids were little, but I also lived at Olympic Village for a few years, so we would walk past constantly, or go in and have lots of fun.” That, plus her office is only a block from the geodesic dome. “I look out at it every day. It’s a great view, and it makes me feel good.”</p>
