--- a/Lees.html
+++ b/Lees.html
@@ -13,16 +13,24 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.css" rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="css/subpages.css" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
 </head>
 <body>
+	<ul id="menu">
+		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+		<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
+		<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+	</ul>
 <div class="interveiw_subpages">
 	<div class="interview_banner_lees">
-		<h1>Bob and Lily Lee</h1>
+
 	</div>
 		<div class="history_bg_orange">
 			<div class="history_title">
-
+<h1>Bob and Lily Lee</h1></br>
 				<p>For the Lee family, the practice of giving back is one that spans generations. Robert (Bob) Lee, Founder and Chairperson of Prospero International Realty Inc. and Co-Founder of Wall Financial Corporation, remembers his father quietly sending cheques to his small family village in Southern China—a tradition among those who’d ventured to the Promised Land.
 </p></br>
 
