--- a/history.html
+++ b/history.html
@@ -13,9 +13,19 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.css" rel="stylesheet" media="all">
 	<link rel="stylesheet" type="text/css" href="css/subpages.css" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
 </head>
 <body>
+
+<ul id="menu">
+	<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+	<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
+	<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+	<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+	<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+</ul>
+
 <div class="history_wrapper">
 
 	<div class="history_bg">
@@ -27,15 +37,6 @@
 
 			</div>
 		</div>
-		<div class="history_intro history_intro_2">
-			<div class="history_intro_title">
-
-				<h1>We’ve reached more than 18 million people!</h1>
-				<h2>Under the dome and across the province</h2>
-
-			</div>
-		</div>
-
 	</div>
 
 	<div class="history_bg_aqua">
@@ -167,23 +168,22 @@
 	<div class="history_bg_orange">
 		<div class="history_title">
 
-<h1>705,000 Visitors our First Year!</h1>
-<h2>We’re open! Science World welcomes 705,000 visitors in its first year under the dome, and visits 96 BC communities with its outreach programs. Roadshows visit 65 schools across the province.</h2>
-</br></br>
-<h1>2,400,000 Students Inspired!</h1>
-<h2>You can’t put a price on science presentations...so we didn’t! Instead, our Scientists and Innovators in the Schools program trains STEAM professionals across the province to deliver free in-class presentations. Since 1989, we have inspired over 2,400,000 students. Get inspired! </h2>
-</br></br>
-<h1>100,000 People Connected!</h1>
-<h2>Our Community Science Celebration program celebrates the cool science that’s happening in communities across BC. This program connects the public to organizations, businesses and educational resources in that region—for free! Over its 12-year history, it has connected over 100,000 people to their local STEAM community. Find out where the next celebration will be!</h2>
-</br></br>
-<h1>660,000 Students Visited!</h1>
-<h2>A tour de force...literally. Our On The Road program brings joy, excitement and the wonders of science to K–12 students across the province. Through its 11-year history, the On The Road gymnasium presentations reached over 660,000 students. Now that’s a lot of TP! Hear what students and teachers are saying bout this program.</h2>
-</br></br>
-<h1>1 Million Visitors in 2018!</h1>
-<h2>A million reasons to celebrate!  We reached 1 million people in 2018, through visitors to the dome and through our outreach programs. That means that over one-fifth of the population of British Columbia have been introduced to, excited by or further developed a life-long love of STEAM. </h2>
+			<h1>We’ve reached more than 18 million people</h1>
+			<h5>Under the dome and across the province</h5></br></br>
+			<h1>2,400,000 Students Inspired</h1>
+			<h5>You can’t put a price on science presentations...so we didn’t. Instead, our Scientists and Innovators in the Schools program trains STEAM professionals across the province to deliver free in-class presentations. Since 1989, we have inspired over 2,400,000 students. Get inspired! </h5>
+			</br></br>
+			<h1>100,000 People Connected</h1>
+			<h5>Our Community Science Celebration program celebrates the cool science that’s happening in communities across BC. This program connects the public to organizations, businesses and educational resources in that region—for free! Over its 12-year history, it has connected over 100,000 people to their local STEAM community. Find out where the next celebration will be!</h5>
+			</br></br>
+			<h1>660,000 Students Visited</h1>
+			<h5>A tour de force...literally. Our On The Road program brings joy, excitement and the wonders of science to K–12 students across the province. Through its 11-year history, the On The Road gymnasium presentations reached over 660,000 students. Now that’s a lot of TP! Hear what students and teachers are saying bout this program.</h5>
+			</br></br>
+			<h1>1 Million Visitors in 2018</h1>
+			<h5>A million reasons to celebrate!  We reached 1 million people in 2018, through visitors to the dome and through our outreach programs. That means that over one-fifth of the population of British Columbia have been introduced to, excited by or further developed a life-long love of STEAM. </h5>
 
-</br></br></br></br>
-<p><i>Answers: 1. Ames’ Room (big-small room)&nbsp;&nbsp;&nbsp;2. Beaver dam&nbsp;&nbsp;&nbsp;3. Jolly Jumper&nbsp;&nbsp;&nbsp;4. Piano in Eureka!&nbsp;&nbsp;&nbsp;5. Van de Graaff generator&nbsp;&nbsp;&nbsp;6. Dino exhibition</i></p>
+			</br></br></br></br>
+			<p><i>Answers: 1. Ames’ Room (big-small room)&nbsp;&nbsp;&nbsp;2. Beaver dam&nbsp;&nbsp;&nbsp;3. Jolly Jumper&nbsp;&nbsp;&nbsp;4. Piano in Eureka!&nbsp;&nbsp;&nbsp;5. Van de Graaff generator&nbsp;&nbsp;&nbsp;6. Dino exhibition</i></p>
 
 
 		</div>
