--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link href="css/thumbnail_image_left_carousel.css" rel="stylesheet" media="all">
 	<link href="css/animate.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
   <script src="js/jquery.js" type="text/javascript"></script>
 
@@ -27,12 +28,15 @@
 
 		$(document).ready(function() {
 	    	$('#pagepiling').pagepiling({
+	    		menu: '#menu',
+	    		anchors: ['home', 'interviews', 'future', 'history', 'share'],
 	    		navigation: {
-		            'textColor': '#fff',
-		            'bulletsColor': '#fff',
-		            'position': 'right'
+		            'textColor': '#f2f2f2',
+		            'bulletsColor': '#ccc',
+		            'position': 'right',
+		            'tooltips': ['home', 'interviews', 'future', 'history', 'share']
 		        }
-					});
+			});
 	    });
     </script>
 		<!-- Page Loader Progress Bar -->
@@ -72,16 +76,190 @@
 		</script>
 </head>
 <body>
-	<!-- Page Loader Progress Bar -->
-	<div id="overlay">
-    <div id="progstat"></div>
-    <div id="progress"></div>
-  </div>
-	<!-- Page Loader Progress Bar -->
+<!-- Page Loader Progress Bar -->
+<div id="overlay">
+	<div id="progstat"></div>
+	<div id="progress"></div>
+</div>
+<!-- Page Loader Progress Bar -->
 
-	<div id="pagepiling">
-	    <div class="section" id="section1">
-				<div class="logo"></div>
+<ul id="menu">
+	<li data-menuanchor="home"><a href="#home">home</a></li>
+	<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
+	<li data-menuanchor="future"><a href="#future">future</a></li>
+	<li data-menuanchor="history"><a href="#history">history</a></li>
+	<li data-menuanchor="share"><a href="#share">share</a></li>
+</ul>
+
+<div id="pagepiling">
+  <div class="section" id="section1" data-anchor="home">
+		<div class="logo"><img src="images/logo.png"/></div>
+		<div class="bg_top_1"></div>
+		<div class="bg_top_2"></div>
+		<div class="bg_top_3"></div>
+		<div class="bg_top_4"></div>
+		<div class="bg_bottom_1"></div>
+		<div class="bg_bottom_2"></div>
+		<div class="bg_bottom_3"></div>
+		<div class="bg_bottom_4"></div>
+		<div class="bg_bottom_5"></div>
+		<div class="bg_bottom_6"></div>
+		<div class="bg_bottom_7"></div>
+  </div>
+
+	<div class="section" id="interviews" data-anchor="interviews">
+	<div class="interview_intro">
+		<h1>Science World</br> Stories</h1>
+	</div>
+	<div id="thumbnail_image_left_carousel" class="carousel slide animate_text thumbnail_image_left_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" data-duration="2000" data-interval="false" data-pause="hover">
+
+		<!-- Indicators -->
+		<ol class="carousel-indicators thumbnail_image_left_carousel_indicators">
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="0" class="active">
+				<img src="images/slider_01.jpg" alt="slider 01" />
+			</li>
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="1">
+				<img src="images/slider_02.jpg" alt="slider 02" />
+			</li>
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="2">
+				<img src="images/slider_03.jpg" alt="slider 03" />
+			</li>
+
+		</ol>
+
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner" role="listbox">
+
+			<!--========= First Slide =========-->
+			<div class="carousel-item active">
+				<img src="images/slider_01.jpg" alt="slider 01" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Cybele Negris</h1>
+					<p>Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls</p>
+				</br><a href="cybele.html">Read the Interview</a>
+				</div>
+			</div>
+
+			<!--========= Second Slide =========-->
+			<div class="carousel-item">
+				<img src="images/slider_02.jpg" alt="slider 02">
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Barbara Brink</h1>
+					<p>For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.</p>
+				</br><a href="barbara.html">Read the Interview</a>
+				</div>
+			</div>
+
+			<!--========= Third Slide =========-->
+			<div class="carousel-item">
+				<img src="images/slider_03.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Bob and Lily Lee</h1>
+					<p>Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth</p>
+				</br><a href="lees.html">Read the Interview</a>
+				</div>
+			</div>
+
+		</div>
+
+	</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+
+</div>
+
+	<div class="section" id="section2" data-anchor="future">
+			<div class="future_intro">
+				<center><h1>BC’s Thriving Future</h1></center>
+			</div>
+
+			<!--*-*-*-*-*-*-*-*-*-*- BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+			<div id="adv_commerce_3_columns_carousel" class="carousel slide commerce_columns_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" wrap="false" data-duration="2000" data-interval="false" data-pause="hover" data-column="3" data-m576="1" data-m768="1" data-m992="3" data-m1200="3">
+				<div class="carousel-inner" role="listbox">
+					<div class="carousel-item active">
+						<div class="row">
+							<div class="col">
+								<div class="commerce_columns_item_inner">
+									<div class="commerce_columns_item_image">
+										<img src="images/team_01.png" alt="slider 03" />
+									</div>
+									<div class="commerce_columns_item_caption">
+										<h3>Girls and STEAM</h3>
+										<p>Empowering girls to pursue their STEAM passions through workshops, speakers and mentors. A symposium and showcase that empowers girls to pursue their STEAM passions through workshops, speakers and mentors.</p>
+										</br><a href="https://www.scienceworld.ca/girls-steam">Find Out More</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="carousel-item">
+						<div class="row">
+							<div class="col">
+								<div class="commerce_columns_item_inner">
+									<div class="commerce_columns_item_image">
+										<img src="images/team_02.png" alt="slider 03" />
+									</div>
+										<div class="commerce_columns_item_caption">
+										<h3>Future Science Leaders</h3>
+										<p>Inspiring and challenging top students to excel in science and innovation through programming from and networking with BC’s top science, technology and business leaders, and peers.</p>
+										</br><a href="https://www.scienceworld.ca/futurescienceleaders">Find Out More</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="carousel-item">
+						<div class="row">
+							<div class="col">
+								<div class="commerce_columns_item_inner">
+								<div class="commerce_columns_item_image">
+									<img src="images/team_03.png" alt="slider 03" />
+								</div>
+								<div class="commerce_columns_item_caption">
+									<h3>Symbiosis</h3>
+									<p>Canada's first STEAM Learning Ecosystem to scale science literacy across BC by providing quality STEAM learning opportunities for all children and youth, regardless of geography, ethnicity or family income.</p>
+									</br><a href="http://www.symbiosis.ca/">Find Out More</a>
+								</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+				<a class="carousel-control-prev commerce_columns_carousel_control_left adv_left" href="#adv_commerce_3_columns_carousel" data-slide="prev">
+					<span class="fa fa-angle-left commerce_columns_carousel_control_icons" aria-hidden="true"></span>
+				</a>
+				<a class="carousel-control-next commerce_columns_carousel_control_right adv_right" href="#adv_commerce_3_columns_carousel" data-slide="next">
+					<span class="fa fa-angle-right commerce_columns_carousel_control_icons" aria-hidden="true"></span>
+				</a>
+
+			</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+	</div>
+
+	<div class="section" id="section3"  data-anchor="history">
+  	<div class="past_intro">
+  		<h1>Explore some of our favourite memories </h1>
+		<h2>From the last 30 years</h2>
+		<br/><br/><a href="history.html">Take Me Back</a>
+  	</div>
+  </div>
+
+	<div class="section" id="section4" data-anchor="share">
+    	<div class="intro">
+    		<h1>Share Your Favourite Memories</h1>
+				</br>
+    		<h3>From your Ha-ha! to your Ah-ha! moment, we want to hear your favourite memory of Science World.</h3>
+				</br></br>
+				<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary">Record Your Memory</a>
+			  </br></br></br>
+				<p>Help us create those Ah-ha! moments in communities across the province!</p>
+				</br></br>
+				<a href="https://www.scienceworld.ca/donate">Donate</a>
+
 				<div class="bg_top_1"></div>
 				<div class="bg_top_2"></div>
 				<div class="bg_top_3"></div>
@@ -93,188 +271,10 @@
 				<div class="bg_bottom_5"></div>
 				<div class="bg_bottom_6"></div>
 				<div class="bg_bottom_7"></div>
-
-	    </div>
-		<div class="section" id="interviews" data-anchor="interviews">
-			<div class="interview_intro">
-				<h1>Science World</br> Stories</h1>
-				<h2>12 inspiring and empowering stories from science enthusiasts and supporters</h2>
 			</div>
-			<div id="thumbnail_image_left_carousel" class="carousel slide animate_text thumbnail_image_left_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" data-duration="2000" data-interval="false" data-pause="hover">
+  </div>
 
-				<!-- Indicators -->
-				<ol class="carousel-indicators thumbnail_image_left_carousel_indicators">
-
-					<li data-target="#thumbnail_image_left_carousel" data-slide-to="0" class="active">
-						<img src="images/slider_01.jpg" alt="slider 01" />
-					</li>
-
-					<li data-target="#thumbnail_image_left_carousel" data-slide-to="1">
-						<img src="images/slider_02.jpg" alt="slider 02" />
-					</li>
-
-					<li data-target="#thumbnail_image_left_carousel" data-slide-to="2">
-						<img src="images/slider_03.jpg" alt="slider 03" />
-					</li>
-
-				</ol>
-
-				<!-- Wrapper for slides -->
-				<div class="carousel-inner" role="listbox">
-
-					<!--========= First Slide =========-->
-					<div class="carousel-item active">
-						<img src="images/slider_01.jpg" alt="slider 01" />
-						<div class="carousel-caption thumbnail_image_left_carousel_caption">
-							<h1>Cybele Negris</h1>
-							<p>Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls</p>
-						</br><a href="cybele.html">Read the Interview</a>
-						</div>
-					</div>
-
-					<!--========= Second Slide =========-->
-					<div class="carousel-item">
-						<img src="images/slider_02.jpg" alt="slider 02">
-						<div class="carousel-caption thumbnail_image_left_carousel_caption">
-							<h1>Barbara Brink</h1>
-							<p>For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.</p>
-						</br><a href="barbara.html">Read the Interview</a>
-						</div>
-					</div>
-
-					<!--========= Third Slide =========-->
-					<div class="carousel-item">
-						<img src="images/slider_03.jpg" alt="slider 03" />
-						<div class="carousel-caption thumbnail_image_left_carousel_caption">
-							<h1>Bob and Lily Lee</h1>
-							<p>Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth</p>
-						</br><a href="lees.html">Read the Interview</a>
-						</div>
-					</div>
-
-				</div>
-
-			</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
-
-		</div>
-
-		<div class="section" id="section2" data-anchor="future">
-	    	<div class="intro">
-					<div class="future_intro">
-						<center><h1>BC’s Thriving Future</h1></center>
-					</div>
-					<!--*-*-*-*-*-*-*-*-*-*- BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
-
-					<div id="adv_commerce_3_columns_carousel" class="carousel slide commerce_columns_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" wrap="false" data-duration="2000" data-interval="false" data-pause="hover" data-column="3" data-m576="1" data-m768="1" data-m992="3" data-m1200="3">
-
-						<!--========= Wrapper for slides =========-->
-						<div class="carousel-inner" role="listbox">
-
-							<!--========= First slide =========-->
-							<div class="carousel-item active">
-								<div class="row"> <!-- Row -->
-									<div class="col">
-										<div class="commerce_columns_item_inner">
-											<div class="commerce_columns_item_image">
-												<img src="images/team_01.png" alt="slider 03" />
-											</div>
-											<div class="commerce_columns_item_caption">
-												<h3>Girls and STEAM</h3>
-												<p>Empowering girls to pursue their STEAM passions through workshops, speakers and mentors. A symposium and showcase that empowers girls to pursue their STEAM passions through workshops, speakers and mentors.</p>
-											</br><a href="https://www.scienceworld.ca/girls-steam">Find Out More</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--========= Second slide =========-->
-							<div class="carousel-item">
-								<div class="row"> <!-- Row -->
-									<div class="col">
-										<div class="commerce_columns_item_inner">
-											<div class="commerce_columns_item_image">
-												<img src="images/team_02.png" alt="slider 03" />
-											</div>
-											<div class="commerce_columns_item_caption">
-												<h3>Future Science Leaders</h3>
-												<p>Inspiring and challenging top students to excel in science and innovation through programming from and networking with BC’s top science, technology and business leaders, and peers.</p>
-											</br><a href="https://www.scienceworld.ca/futurescienceleaders">Find Out More</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--========= Third Slide =========-->
-							<div class="carousel-item">
-								<div class="row"> <!-- Row -->
-									<div class="col">
-										<div class="commerce_columns_item_inner">
-											<div class="commerce_columns_item_image">
-												<img src="images/team_03.png" alt="slider 03" />
-											</div>
-											<div class="commerce_columns_item_caption">
-												<h3>Symbiosis</h3>
-												<p>Canada's first STEAM Learning Ecosystem to scale science literacy across BC by providing quality STEAM learning opportunities for all children and youth, regardless of geography, ethnicity or family income.</p>
-												</br><a href="http://www.symbiosis.ca/">Find Out More</a>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-
-						</div>
-
-						<!--======= Navigation Buttons =========-->
-
-
-
-					</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
-					<!--======= Left Button =========-->
-					<a class="carousel-control-prev commerce_columns_carousel_control_left adv_left" href="#adv_commerce_3_columns_carousel" data-slide="prev">
-						<span class="fa fa-angle-left commerce_columns_carousel_control_icons" aria-hidden="true"></span>
-					</a>
-
-					<!--======= Right Button =========-->
-					<a class="carousel-control-next commerce_columns_carousel_control_right adv_right" href="#adv_commerce_3_columns_carousel" data-slide="next">
-						<span class="fa fa-angle-right commerce_columns_carousel_control_icons" aria-hidden="true"></span>
-					</a>
-
-	    	</div>
-	    </div>
-	    <div class="section" id="section3"  data-anchor="history">
-	    	<div class="past_intro">
-	    		<h4>Explore some of our favourite memories </h4>
-				<h2>From the last 30 years</h2>
-				<br/><br/><a href="history.html">Take Me Back</a>
-	    	</div>
-	    </div>
-			<div class="section" id="section4" data-anchor="share">
-		    	<div class="intro">
-		    		<h1>Share Your Favourite Memories</h1>
-		    		<h3>From your Ha-ha! to your Ah-ha! moment, we want to hear your favourite memory of Science World.</h3>
-						</br>
-						<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary">Record Your Memory</a>
-					  </br></br></br>
-						<p>Help us create those Ah-ha! moments in communities across the province!</p>
-						</br>
-						<a href="https://www.scienceworld.ca/donate">Donate</a>
-
-						<div class="bg_top_1"></div>
-						<div class="bg_top_2"></div>
-						<div class="bg_top_3"></div>
-						<div class="bg_top_4"></div>
-						<div class="bg_bottom_1"></div>
-						<div class="bg_bottom_2"></div>
-						<div class="bg_bottom_3"></div>
-						<div class="bg_bottom_4"></div>
-						<div class="bg_bottom_5"></div>
-						<div class="bg_bottom_6"></div>
-						<div class="bg_bottom_7"></div>
-					</div>
-	    </div>
-	</div>
+</div>
 
 
 <script src="js/bootstrap.js"></script>
