--- a/history.html
+++ b/history.html
@@ -107,51 +107,27 @@
 	<div class="history_bg">
 
 		<div class="history_quiz_1 history_quiz">
-			<div class="history_quiz_wrapper">
-				<div class="history_quiz_title">
-					<h1>1</h1>
-				</div>
-			</div>
+			<div class="history_quiz_wrapper"></div>
 		</div>
 
 		<div class="history_quiz_2 history_quiz">
-			<div class="history_quiz_wrapper">
-				<div class="history_quiz_title">
-					<h1>2</h1>
-				</div>
-			</div>
+			<div class="history_quiz_wrapper"></div>
 		</div>
 
 		<div class="history_quiz_3 history_quiz">
-			<div class="history_quiz_wrapper">
-				<div class="history_quiz_title">
-					<h1>3</h1>
-				</div>
-			</div>
+			<div class="history_quiz_wrapper"></div>
 		</div>
 
 		<div class="history_quiz_4 history_quiz">
-			<div class="history_quiz_wrapper">
-				<div class="history_quiz_title">
-					<h1>4</h1>
-				</div>
-			</div>
+			<div class="history_quiz_wrapper"></div>
 		</div>
 
 		<div class="history_quiz_5 history_quiz">
-			<div class="history_quiz_wrapper">
-				<div class="history_quiz_title">
-					<h1>5</h1>
-				</div>
-			</div>
+			<div class="history_quiz_wrapper"></div>
 		</div>
 
 		<div class="history_quiz_6 history_quiz">
-			<div class="history_quiz_wrapper">
-				<div class="history_quiz_title">
-					<h1>6</h1>
-				</div>
-			</div>
+			<div class="history_quiz_wrapper"></div>
 		</div>
 
 	</div>
