updates for testing

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				<div class="carousel-caption thumbnail_image_left_carousel_caption">
 					<h1>Cybele Negris</h1>
 					<p>Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls</p>
-				</br><a href="cybele.html">Read the Interview</a>
+				</br><a href="Cybele.html">Read the Interview</a>
 				</div>
 			</div>
 
@@ -150,7 +150,7 @@
 				<div class="carousel-caption thumbnail_image_left_carousel_caption">
 					<h1>Barbara Brink</h1>
 					<p>For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.</p>
-				</br><a href="barbara.html">Read the Interview</a>
+				</br><a href="Barbara.html">Read the Interview</a>
 				</div>
 			</div>
 
@@ -160,7 +160,7 @@
 				<div class="carousel-caption thumbnail_image_left_carousel_caption">
 					<h1>Bob and Lily Lee</h1>
 					<p>Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth</p>
-				</br><a href="lees.html">Read the Interview</a>
+				</br><a href="Lees.html">Read the Interview</a>
 				</div>
 			</div>
 
