--- a/Lees.html
+++ b/Lees.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="" />
 	<meta name="keywords"  content="" />
 	<meta name="Resource-type" content="Document" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- CSS -->
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
