--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
 </div>
 <!-- Page Loader Progress Bar -->
 
+<div id="menuToggle">
+	<input type="checkbox" />
+		<span></span>
+		<span></span>
+		<span></span>
+	<ul id="menu_burger">
+		<li data-menuanchor="home"><a href="#home">home</a></li>
+		<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
+		<li data-menuanchor="future"><a href="#future">future</a></li>
+		<li data-menuanchor="history"><a href="#history">history</a></li>
+		<li data-menuanchor="share"><a href="#share">share</a></li>
+	</ul>
+</div>
+
 <ul id="menu">
 	<li data-menuanchor="home"><a href="#home">home</a></li>
 	<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
