--- a/history.html
+++ b/history.html
@@ -16,16 +16,35 @@
 	<link rel="stylesheet" type="text/css" href="css/subpages.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
+
 </head>
 <body>
 
-<ul id="menu">
-	<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-	<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-	<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-	<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-	<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-</ul>
+
+	<!-- Menus -->
+	<!-- Mobile Menu -->
+	<div id="menuToggle">
+		<input type="checkbox" />
+			<span></span>
+			<span></span>
+			<span></span>
+		<ul id="menu_burger">
+			<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+			<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
+			<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+			<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+			<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+		</ul>
+	</div>
+	<!-- Desktop Menu -->
+	<ul id="menu">
+		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+		<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
+		<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+	</ul>
+	<!-- Menus -->
 
 <div class="history_wrapper">
 
