--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 </div>
 <!-- Page Loader Progress Bar -->
 
+<!-- Menus -->
+<!-- Mobile Menu -->
 <div id="menuToggle">
 	<input type="checkbox" />
 		<span></span>
@@ -97,7 +99,7 @@
 		<li data-menuanchor="share"><a href="#share">share</a></li>
 	</ul>
 </div>
-
+<!-- Desktop Menu -->
 <ul id="menu">
 	<li data-menuanchor="home"><a href="#home">home</a></li>
 	<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
@@ -105,6 +107,7 @@
 	<li data-menuanchor="history"><a href="#history">history</a></li>
 	<li data-menuanchor="share"><a href="#share">share</a></li>
 </ul>
+<!-- Menus -->
 
 <div id="pagepiling">
   <div class="section" id="section1" data-anchor="home">
@@ -186,11 +189,11 @@
 
 	<div class="section" id="section2" data-anchor="future">
 			<div class="future_intro">
-				<center><h1>BC’s Thriving Future</h1></center>
+				<h1>BC’s Thriving Future</h1>
 			</div>
 
 			<!--*-*-*-*-*-*-*-*-*-*- BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
-			<div id="adv_commerce_3_columns_carousel" class="carousel slide commerce_columns_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" wrap="false" data-duration="2000" data-interval="false" data-pause="hover" data-column="3" data-m576="1" data-m768="1" data-m992="2" data-m1200="3">
+			<div id="adv_commerce_3_columns_carousel" class="carousel slide commerce_columns_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" wrap="false" data-duration="500" data-interval="false" data-pause="hover" data-column="3" data-m576="1" data-m768="1" data-m992="2" data-m1200="3">
 				<div class="carousel-inner" role="listbox">
 					<div class="carousel-item active">
 						<div class="row">
