--- a/Barbara.html
+++ b/Barbara.html
@@ -16,9 +16,18 @@
 	<link rel="stylesheet" type="text/css" href="css/subpages.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3676777-10"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-3676777-10');
+	</script>
 </head>
 <body>
-	
+
 	<!-- Menus -->
 	<!-- Mobile Menu -->
 	<div id="menuToggle">
