--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 	<script type="text/javascript" src="js/jquery.pagepiling.min.js"></script>
 	<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
 	<script src="js/jquery.timers-1.2.js" type="text/javascript"></script>
-	<script type="text/javascript">
+  <script type="text/javascript">
 		var deleteLog = false;
 
 		$(document).ready(function() {
 	    	$('#pagepiling').pagepiling({
 	    		menu: '#menu',
+					touchSensitivity: 2,
 	    		anchors: ['home', 'interviews', 'future', 'history', 'share'],
 	    		navigation: {
 		            'textColor': '#f2f2f2',
@@ -40,6 +41,7 @@
 			});
 	    });
     </script>
+
 		<!-- Page Loader Progress Bar -->
 		<script type="text/javascript">
 			;(function(){
@@ -74,6 +76,15 @@
 				}
 				document.addEventListener('DOMContentLoaded', loadbar, false);
 				}());
+		</script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3676777-10"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-3676777-10');
 		</script>
 </head>
 <body>
@@ -129,7 +140,7 @@
 	<div class="interview_intro">
 		<h1>Science World</br> Stories</h1>
 	</div>
-	<div id="thumbnail_image_left_carousel" class="carousel slide animate_text thumbnail_image_left_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" data-duration="2000" data-interval="false" data-pause="hover">
+	<div id="thumbnail_image_left_carousel" class="carousel slide animate_text thumbnail_image_left_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" data-duration="500" data-interval="false" data-pause="hover">
 
 		<!-- Indicators -->
 		<ol class="carousel-indicators thumbnail_image_left_carousel_indicators">
@@ -268,11 +279,11 @@
 
 	<div class="section" id="section4" data-anchor="share">
     	<div class="intro">
-    		<h1>Share Your Favourite Memories</h1>
+    		<h1>WIN A FAMILY MEMBERSHIP</h1>
 				</br>
-    		<h3>From your Ha-ha! to your Ah-ha! moment, we want to hear your favourite memory of Science World.</h3>
+    		<h3>From Your Ha-Ha! To Your Ah-Ha! Moments, We Want To Hear Your Favourite Memories Of Science World. Record Your Memory For A Chance To Win A 1-Year Family Membership.</h3>
 				</br></br>
-				<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary">Record Your Memory</a>
+				<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary">Let's Get Started</a>
 			  </br></br></br>
 				<p>Help us create those Ah-ha! moments in communities across the province!</p>
 				</br></br>
