--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		$(document).ready(function() {
 	    	$('#pagepiling').pagepiling({
 	    		menu: '#menu',
-					touchSensitivity: 2,
+					touchSensitivity: 1,
 	    		anchors: ['home', 'interviews', 'future', 'history', 'share'],
 	    		navigation: {
 		            'textColor': '#f2f2f2',
@@ -216,7 +216,7 @@
 									<div class="commerce_columns_item_caption">
 										<h3>Girls and STEAM</h3>
 										<p>Empowering girls to pursue their STEAM passions through workshops, speakers and mentors. A symposium and showcase that empowers girls to pursue their STEAM passions through workshops, speakers and mentors.</p>
-										</br><a href="scienceworld.ca/girls-steam">Find Out More</a>
+										</br><a href="https://www.scienceworld.ca/girls-steam">Find Out More</a>
 									</div>
 								</div>
 							</div>
@@ -233,7 +233,7 @@
 										<div class="commerce_columns_item_caption">
 										<h3>Future Science Leaders</h3>
 										<p>Inspiring and challenging top students to excel in science and innovation through programming from and networking with BC’s top science, technology and business leaders, and peers.</p>
-										</br><a href="scienceworld.ca/futurescienceleaders">Find Out More</a>
+										</br><a href="https://www.scienceworld.ca/futurescienceleaders">Find Out More</a>
 									</div>
 								</div>
 							</div>
@@ -250,7 +250,7 @@
 								<div class="commerce_columns_item_caption">
 									<h3>Symbiosis</h3>
 									<p>Canada's first STEAM Learning Ecosystem to scale science literacy across BC by providing quality STEAM learning opportunities for all children and youth, regardless of geography, ethnicity or family income.</p>
-									</br><a href="symbiosis.ca/">Find Out More</a>
+									</br><a href="http://www.symbiosis.ca">Find Out More</a>
 								</div>
 								</div>
 							</div>
@@ -307,7 +307,6 @@
 
 
 <script src="js/bootstrap.js"></script>
-<script src="js/touchSwipe.js"></script>
 <script src="js/responsive_bootstrap_carousel.js"></script>
 
 </body>
