--- a/index.html
+++ b/index.html
@@ -97,18 +97,20 @@
 
 <!-- Menus -->
 <!-- Mobile Menu -->
-<div id="menuToggle">
-	<input type="checkbox" />
-		<span></span>
-		<span></span>
-		<span></span>
-	<ul id="menu_burger">
-		<li data-menuanchor="home"><a href="#home">home</a></li>
-		<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
-		<li data-menuanchor="future"><a href="#future">future</a></li>
-		<li data-menuanchor="history"><a href="#history">history</a></li>
-		<li data-menuanchor="share"><a href="#share">share</a></li>
-	</ul>
+<div class="mobile_menu">
+	<div id="menuToggle">
+		<input type="checkbox" />
+			<span></span>
+			<span></span>
+			<span></span>
+		<ul id="menu_burger">
+			<li data-menuanchor="home"><a href="#home">home</a></li>
+			<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
+			<li data-menuanchor="future"><a href="#future">future</a></li>
+			<li data-menuanchor="history"><a href="#history">history</a></li>
+			<li data-menuanchor="share"><a href="#share">share</a></li>
+		</ul>
+	</div>
 </div>
 <!-- Desktop Menu -->
 <ul id="menu">
