--- a/Barbara.html
+++ b/Barbara.html
@@ -30,19 +30,21 @@
 
 	<!-- Menus -->
 	<!-- Mobile Menu -->
-	<div id="menuToggle">
-		<input type="checkbox" />
-			<span></span>
-			<span></span>
-			<span></span>
-			<ul id="menu_burger">
-				<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-				<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-				<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-				<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-				<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-			</ul>
-		</div>
+	<div class="mobile_menu">
+		<div id="menuToggle">
+			<input type="checkbox" />
+				<span></span>
+				<span></span>
+				<span></span>
+				<ul id="menu_burger">
+					<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+					<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
+					<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+					<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+					<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+				</ul>
+			</div>
+	</div>
 		<!-- Desktop Menu -->
 		<ul id="menu">
 			<li data-menuanchor="home"><a href="index.html#home">home</a></li>
@@ -54,7 +56,7 @@
 	<!-- Menus -->
 
 <div class="interveiw_subpages">
-	<div class="interview_banner_barbara">
+	<div class="interview_banner_barbara interview_image">
 
 	</div>
 		<div class="history_bg_orange">
