--- a/history.html
+++ b/history.html
@@ -31,6 +31,7 @@
 
 	<!-- Menus -->
 	<!-- Mobile Menu -->
+<div class="mobile_menu">
 	<div id="menuToggle">
 		<input type="checkbox" />
 			<span></span>
@@ -44,6 +45,7 @@
 			<li data-menuanchor="share"><a href="index.html#share">share</a></li>
 		</ul>
 	</div>
+</div>
 	<!-- Desktop Menu -->
 	<ul id="menu">
 		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
